MyPascal.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MyPascal.java */
class MyPascal/*@bgen(jjtree)*/implements MyPascalTreeConstants, MyPascalConstants {/*@bgen(jjtree)*/
  protected JJTMyPascalState jjtree = new JJTMyPascalState();public static void main(String[] args) throws ParseException {

                try{

                        MyPascal parser = new  MyPascal(System.in);

                        //Chamada para o primeiro método, início da análise
                        System.out.println("Tokens: ");
                        SimpleNode root = parser.start();
                        System.out.println("");

                        //Imprime a árvore
                        System.out.println("\u00c3\ufffdrvore: ");
                        root.dump("   ");

                        System.out.println("An\u00c3\u00a1lise com sucesso l\u00c3\u00a9xica e sint\u00c3\u00a1tica com sucesso");


                } catch (ParseException e){
                        System.out.println("Erro encontrado na an\u00c3\u00a1lise sint\u00c3\u00a1tica");
                        System.out.println(e.getMessage());
                } catch (TokenMgrError m){
                        System.out.println("Erro encontrado na an\u00c3\u00a1lise l\u00c3\u00a1xica");
                        System.out.println(m.getMessage());
                }
        }

/*
 * Funções para Analise sintatica
 */

// Programa completo composto de cabeçalho do programa, declarações de variaveis e funções, e função principal
  final public SimpleNode start() throws ParseException {
                             /*@bgen(jjtree) START */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      program_header();
      header();
      token_begin();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case IF:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        instruction();
      }
      token_end_period();
      jj_consume_token(0);
                                                                                           jjtree.closeNodeScope(jjtn000, true);
                                                                                           jjtc000 = false;
                                                                                          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

// Cabeçalho do programa.
// Ex.: program Somador;
  final public void program_header() throws ParseException {
                                         /*@bgen(jjtree) PROGRAM_HEADER */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM_HEADER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      token_program();
      token_identifier();
      token_semicolon();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Conjunto de variaveis (para auxiliar na declaração).
// Ex.: a | a,b | a,b,c
  final public void var_group() throws ParseException {
                               /*@bgen(jjtree) VAR_GROUP */
  SimpleNode jjtn000 = new SimpleNode(JJTVAR_GROUP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      token_identifier();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        token_comma();
        token_identifier();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Declaração de uma variavel ou um grupo de variaveis e seu tipo.
// Ex.: a, b :integer;
  final public void var_group_type() throws ParseException {
                                  /*@bgen(jjtree) DEC_VAR */
  SimpleNode jjtn000 = new SimpleNode(JJTDEC_VAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      var_group();
      token_colon();
      token_type();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Area de declaração de variavel, declaração de variaveis precedido pela palavra reservada "var"
// Ex.: var a, b: integer;
//          c: string;
//
//      var d: real;
  final public void var_declaration() throws ParseException {
                                       /*@bgen(jjtree) DECLARATION */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      token_var();
      label_3:
      while (true) {
        var_group_type();
        token_semicolon();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Operação aritmetica
// Ex.: a + b | 1 + 2 | (a * b) | a - 4 | a + b + c | (1 + b / 2) | (1 + b) * 3 | a * (2 + 3 + b)
  final public void arithmetic_operation() throws ParseException {
                                                     /*@bgen(jjtree) ARITHMETIC_OPERATION */
  SimpleNode jjtn000 = new SimpleNode(JJTARITHMETIC_OPERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        token_identifier();
        break;
      case NUMBER:
        token_number();
        break;
      case REAL_NUMBER:
        token_real_number();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ARITHMETIC_OPERATOR:
        case NUMBER:
        case REAL_NUMBER:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ARITHMETIC_OPERATOR:
          token_arithmetic_operator();
          token_identifier();
          break;
        case NUMBER:
          token_number();
          break;
        case REAL_NUMBER:
          token_real_number();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Operação relacional
// Ex.: (a > b) | (2 <= 3) | (b = 2) | (a + b >= 12) | (a = true)
  final public void relational_operation() throws ParseException {
                                                   /*@bgen(jjtree) RELATION_OPERATION */
  SimpleNode jjtn000 = new SimpleNode(JJTRELATION_OPERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMBER:
      case REAL_NUMBER:
      case IDENTIFIER:
        arithmetic_operation();
        break;
      case BOOL:
        token_bool();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RELATIONAL_OPERATOR:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_5;
        }
        token_relational_operator();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUMBER:
        case REAL_NUMBER:
        case IDENTIFIER:
          arithmetic_operation();
          break;
        case BOOL:
          token_bool();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Operação booleana
// Ex.: true and false | (a > x) or (x > c) | not a | not (a > x)
  final public void logic_operation() throws ParseException {
                                           /*@bgen(jjtree) LOGIC_OPERATION */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGIC_OPERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LOGIC_OPERATOR_NOT:
        token_logic_operator_not();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      relational_operation();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LOGIC_OPERATOR:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        token_logic_operator();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LOGIC_OPERATOR_NOT:
          token_logic_operator_not();
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        relational_operation();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Atribuição
// a := b | a := 3 | a := true | a := 'mensagem' | a := b + c | a := b < c | a := not b | a := a or b | a := soma(b, c)
  final public void assignment_instruction() throws ParseException {
                                             /*@bgen(jjtree) ASSIGNMENT */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      token_assignment();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LOGIC_OPERATOR_NOT:
      case BOOL:
      case NUMBER:
      case REAL_NUMBER:
      case IDENTIFIER:
        logic_operation();
        break;
      case STRING:
        token_string();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      token_semicolon();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Laço de repetição - for
// Ex.: for i:=0 to (a+c) do begin <uma ou mais instruções> end;
  final public void loop_for_instruction() throws ParseException {
                                         /*@bgen(jjtree) LOOP_FOR */
  SimpleNode jjtn000 = new SimpleNode(JJTLOOP_FOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      token_for();
      token_identifier();
      token_assignment();
      arithmetic_operation();
      token_to();
      arithmetic_operation();
      token_do();
      token_begin();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case IF:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_7;
        }
        instruction();
      }
      token_end_semicolon();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// If - then - else - Instrução condicional
// Ex.: if((a > b) and c) then begin <uma ou mais instruções> end;
//      if((a > b) and c) then begin <uma ou mais instruções> end else <uma ou mais instruções> end;
  final public void if_then_else_instruction() throws ParseException {
                                                 /*@bgen(jjtree) IF_THEN_ELSE */
  SimpleNode jjtn000 = new SimpleNode(JJTIF_THEN_ELSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      token_if();
      token_l_bracket();
      logic_operation();
      token_r_bracket();
      token_then();
      token_begin();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case IF:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_8;
        }
        instruction();
      }
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case END:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_9;
        }
        token_end();
        token_else();
        token_begin();
        label_10:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FOR:
          case IF:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[16] = jj_gen;
            break label_10;
          }
          instruction();
        }
      }
      token_end_semicolon();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Chamada de função
// Ex.: nome_da_funcao(a, b, c); | nome_da_funcao();
  final public void function_call() throws ParseException {
                                       /*@bgen(jjtree) FUNCTION_CALL */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCTION_CALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      token_l_bracket();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOL:
        case NUMBER:
        case REAL_NUMBER:
        case STRING:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_11;
        }
        function_params();
      }
      token_r_bracket();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
